deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-upload-file
spec:
  selector:
    matchLabels:
      app: app-upload-file
  template:
    metadata:
      labels:
        app: app-upload-file
    spec:
      containers:
        - name: app-upload-file
          image: iuripetrola/app_upload_file:1.1.0
          ports:
          - containerPort: 80
          volumeMounts:
          - name: vol-upload-file
            mountPath: "/mnt/uploads/"
      volumes:
        - name: vol-upload-file
          persistentVolumeClaim: 
            claimName: consultoria-pvc-upload-files

---
apiVersion: v1
kind: Service
metadata:
  name: app-upload-file
spec:
  selector: 
    app: app-upload-file
  ports:
    - port: 80
      targetPort: 80
